[gd_scene format=3 uid="uid://d15wcrmaekds2"]

[ext_resource type="Script" uid="uid://ciyjsctdmpdcx" path="res://addons/icosa/browser/browser.gd" id="1_v1e32"]
[ext_resource type="Texture2D" uid="uid://bwqa7sodpxksf" path="res://addons/icosa/icons/cog.svg" id="2_0gaid"]
[ext_resource type="Texture2D" uid="uid://ins6wc37p0rb" path="res://addons/icosa/icons/person.svg" id="2_0rwh0"]
[ext_resource type="Texture2D" uid="uid://cegfltvs7kyjw" path="res://addons/icosa/icons/trash_cross.svg" id="2_si3j3"]
[ext_resource type="Texture2D" uid="uid://4ova4wsdy5x8" path="res://addons/icosa/icons/magnify.svg" id="3_4htgg"]
[ext_resource type="Script" uid="uid://bbbc1ict32pjm" path="res://addons/icosa/browser/settings.gd" id="4_si3j3"]
[ext_resource type="Texture2D" uid="uid://ccmeocu15nk48" path="res://addons/icosa/icons/plus.svg" id="4_vx57s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_62xju"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_si3j3"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_5x70h"]
load_path = "res://.godot/imported/folder.svg-e3ca22fb82fbe99a00a84527c335c1e4.ctex"

[node name="Icosa" type="Control" unique_id=323872178]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Browser" type="VBoxContainer" parent="." unique_id=1950819649]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="IcosaBrowser" type="TabContainer" parent="Browser" unique_id=787045342]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/side_margin = 32
current_tab = 1
tab_focus_mode = 0
tab_0/icon = ExtResource("2_0rwh0")
tab_1/title = "Search - "
tab_1/icon = ExtResource("3_4htgg")
tab_2/icon = ExtResource("4_vx57s")
script = ExtResource("1_v1e32")

[node name="DownloadProgressBars" type="VBoxContainer" parent="Browser" unique_id=1661490414]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Browser/DownloadProgressBars" unique_id=1613109867]
layout_mode = 2

[node name="TotalDownloadsProgress" type="ProgressBar" parent="Browser/DownloadProgressBars/HBoxContainer" unique_id=1312821483]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
max_value = 2.0
value = 2.0
show_percentage = false

[node name="CenterContainer" type="CenterContainer" parent="Browser/DownloadProgressBars/HBoxContainer/TotalDownloadsProgress" unique_id=1248109752]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TotalDownloadsLabel" type="Label" parent="Browser/DownloadProgressBars/HBoxContainer/TotalDownloadsProgress/CenterContainer" unique_id=214185714]
unique_name_in_owner = true
layout_mode = 2
text = "Galactic Cat: 1/1 assets - 2/2 files"

[node name="CancelAllDownloads" type="Button" parent="Browser/DownloadProgressBars/HBoxContainer" unique_id=1856930942]
visible = false
layout_mode = 2
icon = ExtResource("2_si3j3")

[node name="CurrentDownloadProgress" type="ProgressBar" parent="Browser/DownloadProgressBars" unique_id=1376745789]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
show_percentage = false

[node name="CenterContainer" type="CenterContainer" parent="Browser/DownloadProgressBars/CurrentDownloadProgress" unique_id=244308852]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CurrentlDownloadLabel" type="Label" parent="Browser/DownloadProgressBars/CurrentDownloadProgress/CenterContainer" unique_id=592784842]
unique_name_in_owner = true
layout_mode = 2
text = "Galactic Cat > tmp1435adba.gltf: 0.00 MB (connecting...)"

[node name="Settings" type="Button" parent="." unique_id=745023752]
unique_name_in_owner = true
visible = false
layout_mode = 1
offset_right = 32.0
offset_bottom = 32.0
theme_override_styles/normal = SubResource("StyleBoxFlat_62xju")
theme_override_styles/focus = SubResource("StyleBoxEmpty_si3j3")
toggle_mode = true
icon = ExtResource("2_0gaid")
icon_alignment = 1

[node name="SettingsWindow" type="AcceptDialog" parent="." unique_id=888803846]
unique_name_in_owner = true
oversampling_override = 1.0
title = "⚙️ Icosa Settings"
initial_position = 1
size = Vector2i(550, 300)
ok_button_text = "Done"
script = ExtResource("4_si3j3")

[node name="TabContainer" type="TabContainer" parent="SettingsWindow" unique_id=846409155]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -45.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 0

[node name="Downloads" type="PanelContainer" parent="SettingsWindow/TabContainer" unique_id=83236199]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="SettingsWindow/TabContainer/Downloads" unique_id=1983660866]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsWindow/TabContainer/Downloads/MarginContainer" unique_id=854366270]
layout_mode = 2

[node name="DownloadsPath" type="HBoxContainer" parent="SettingsWindow/TabContainer/Downloads/MarginContainer/VBoxContainer" unique_id=1433644890]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsWindow/TabContainer/Downloads/MarginContainer/VBoxContainer/DownloadsPath" unique_id=387645742]
layout_mode = 2
text = "Downloads Path:"

[node name="DownloadsPath" type="LineEdit" parent="SettingsWindow/TabContainer/Downloads/MarginContainer/VBoxContainer/DownloadsPath" unique_id=1925851124]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "res://Downloads"

[node name="DownloadsPathDialog" type="FileDialog" parent="SettingsWindow/TabContainer/Downloads/MarginContainer/VBoxContainer/DownloadsPath/DownloadsPath" unique_id=1196023893]
unique_name_in_owner = true

[node name="SelectDownloadsPath" type="Button" parent="SettingsWindow/TabContainer/Downloads/MarginContainer/VBoxContainer/DownloadsPath" unique_id=411389503]
layout_mode = 2
icon = SubResource("CompressedTexture2D_5x70h")

[node name="User" type="PanelContainer" parent="SettingsWindow/TabContainer" unique_id=2069162370]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsWindow/TabContainer/User" unique_id=982676705]
layout_mode = 2

[node name="UserSettingsDoNotShowDeleteConfirmWindow" type="CheckBox" parent="SettingsWindow/TabContainer/User/VBoxContainer" unique_id=883760595]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 12
text = "Hide confirmation when deleting an asset"

[connection signal="pressed" from="Browser/DownloadProgressBars/HBoxContainer/CancelAllDownloads" to="Browser/IcosaBrowser" method="_on_cancel_all_downloads_pressed"]
[connection signal="toggled" from="Settings" to="Browser/IcosaBrowser" method="_on_settings_toggled"]
[connection signal="canceled" from="SettingsWindow" to="Browser/IcosaBrowser" method="_on_settings_window_canceled"]
[connection signal="confirmed" from="SettingsWindow" to="Browser/IcosaBrowser" method="_on_settings_window_confirmed"]
[connection signal="dir_selected" from="SettingsWindow/TabContainer/Downloads/MarginContainer/VBoxContainer/DownloadsPath/DownloadsPath/DownloadsPathDialog" to="Browser/IcosaBrowser" method="_on_downloads_path_dialog_dir_selected"]
[connection signal="toggled" from="SettingsWindow/TabContainer/User/VBoxContainer/UserSettingsDoNotShowDeleteConfirmWindow" to="Browser/IcosaBrowser" method="_on_user_settings_do_not_show_delete_confirm_window_toggled"]
